# confed

./: .project  .pydevproject  README.md  build  install  requirements.txt  setup.cfg  test-install  test-install-with-pipx  test-publish
man/: reconf.1
src/: confed  reconf
src/confed.egg-info/: PKG-INFO  SOURCES.txt
src/reconf.egg-info/: PKG-INFO  SOURCES.txt
test/: test
test/argparse/: receive_arg  send_arg
test/data/: 01 - existing-setting-update.result  02 - commented-setting-update.result  03 - numeric-value-update.expected  04 - united-number-setting-update.result  05 - add-new-setting.expected  05 - add-new-setting.result  06 - add-new-setting-before.expected  06 - add-new-setting-before.result  07 - add-new-setting-after.expected  07 - add-new-setting-after.result  08 - delete setting.expected  08 - delete setting.result  11 - add with comment.expected  12 - update with comment update.expected  13 - update with new comment.expected  14 - a noequal setting.result  15 - ssh config test - modify.expected  16 - ssh config test - add multi.expected  17 - ssh config test - del multi.result  18 - sudoers config test.result  19 - sudoers config test - modify.result  19 - sudoers config test.expected  20 - sudoers config test - complex multiple delete.expected  21 - php config test.expected  22 - php config test - file path.expected  23 - uwsgi config test - chown test.expected  24 - uwsgi config test - multi delete test (regex value test).result  24 - uwsgi config test - multi delete test.result  25 - list single value.expected  26 - list multiple values.result  (+14 more)
