[metadata]
name = reconf
version = 0.1
author = Bernd Wechner
author_email = bwechner@yahoo.com
description = A tool for programmatic editing of configuration files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bernd-wechner/reconf
project_urls =
    Bug Tracker = https://github.com/bernd-wechner/reconf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Freely Distributable
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.10
scripts =
    src/reconf

[options.data_files]
share/man/man1 =
    man/reconf.1 
